--- a/version1/ux-ui-demo_files/style(1).css
+++ b/version1/ux-ui-demo_files/style(1).css
@@ -1850,7 +1850,7 @@ button.sound-btn img {
     left: 3.4%;
 	font-size: 20px;
     line-height: 30px;
-    width: 34%;
+    width: 31%;
 }
 
 .news__inner .wide_box .news-item__hover{
@@ -7325,11 +7325,6 @@ body.single-galleries {
 }
 
 
-.gallery-title-style-dark, .work-items-style-dark{
-	background: #15141a;
-	font-family: tahomanew;
-}
-
 .gallery-title h1 {
 	font-weight: 700;
     font-size: 3.4rem;
@@ -7337,6 +7332,26 @@ body.single-galleries {
     margin-bottom: 2rem;
 }
 
+.gallery-title-style-dark, .work-items-style-dark{
+	background: #15141a;
+	font-family: tahomanew;
+}
+
+.gallery-title-style-dark{
+	padding-bottom: 36px;
+	padding-left: 117px;
+}
+
+.gallery-title-style-dark h1{
+	font-size: 4.2rem;
+    margin: 5px 0px;
+}
+.gallery-title-style-dark p{
+	font-weight: 600;
+    font-size: 2.35rem;
+    max-width: 85rem;
+    line-height: 3.8rem;
+}
 .gallery-title p:not(:last-of-type) {
 	margin-bottom: 2rem;
 }
